# sdk

./: .gitignore  west.yml
.github/workflows/: build-docs.yaml  build-samples-esp-idf.yaml  build-samples-ti.yaml  build-samples-zephyr-ble_beacon.yml  compliance.yaml  static-analysis.yaml  test-zephyr-ble-network.yaml
.meta/: Hubble.syscfg.js
docs/: conf.py  index.rst  requirements.txt
docs/_extensions/: kconfig_autodoc.py
docs/architecture/: project-organization.rst
docs/configuration/: index.rst
docs/quickstart/: index.rst
docs/quickstart/freertos/: index.rst
docs/quickstart/ti/: index.rst
docs/templates/: layout.html
feat-multi-branch-docs/: genindex-H.html  genindex-all.html  genindex.html  index.html  objects.inv  search.html  sitemap.xml
feat-multi-branch-docs/ble/: api.html  index.html  security.html  timing.html
feat-multi-branch-docs/configuration/: index.html
feat-multi-branch-docs/introduction/: index.html
feat-multi-branch-docs/quickstart/: index.html
feat-multi-branch-docs/quickstart/freertos/: index.html
feat-multi-branch-docs/quickstart/zephyr/: index.html
feat-multi-branch-docs/releases/: 1.0.html  index.html
feat-multi-branch-docs/satellite/: api.html  index.html
feat-multi-branch-docs/security/: index.html  vulnerabilities.html  vulnerability-process.html
include/hubble/: ble.h  hubble.h  sat.h
include/hubble/port/: crypto.h  sat_radio.h  sys.h
include/hubble/sat/: dtm.h  packet.h  pass_prediction.h
main/: genindex-H.html  genindex-all.html  genindex.html  index.html  objects.inv  search.html  searchindex.js  sitemap.xml
main/_sources/: index.rst.txt
main/_sources/quickstart/: index.rst.txt
main/_sources/quickstart/esp-idf/: index.rst.txt
main/_sources/quickstart/zephyr/: index.rst.txt
main/_sources/releases/: 2.0.rst.txt  index.rst.txt
main/_sources/satellite/: board-support.rst.txt  index.rst.txt
main/architecture/: index.html  project-organization.html
main/ble/: api.html  index.html  security.html  timing.html
main/configuration/: index.html
main/introduction/: index.html
main/quickstart/: index.html
main/quickstart/esp-idf/: index.html
main/quickstart/freertos/: index.html
main/quickstart/ti/: index.html
main/quickstart/zephyr/: index.html
main/releases/: 1.0.html  2.0.html  index.html
main/satellite/: api.html  board-support.html  index.html
main/security/: index.html  vulnerabilities.html  vulnerability-process.html
port/esp-idf/hubblenetwork-sdk/: CMakeLists.txt  Kconfig
port/esp-idf/hubblenetwork-sdk/boards/esp32c6/: radio.c
port/freertos/: config.h  hubble_freertos.c  hubble_sat_freertos.c  hubblenetwork-sdk.mk  sat_board.h
port/zephyr/: CMakeLists.txt  Kconfig  hubble_sat_zephyr.c  sat_board.h
port/zephyr/boards/nordic/: CMakeLists.txt  sat_dtm.c
port/zephyr/boards/nordic/nrf52/: fem.c  nrf21540dk.c  nrf52_soc.c
port/zephyr/boards/nordic/nrf53/: nrf53_soc.c  thingy53.c
port/zephyr/boards/nordic/nrf54/: nrf54_soc.c
port/zephyr/boards/silabs/efr32/: CMakeLists.txt  radio.c
port/zephyr/boards/silabs/efr32/xg24/: radio_settings.radioconf  rail_config.h  rail_config_v1.c
samples/esp-idf/sat-continuous/: CMakeLists.txt  README.md  sdkconfig.defaults
samples/esp-idf/sat-continuous/main/: CMakeLists.txt  Kconfig.projbuild  main.c  time_sync.c  time_sync.h
samples/esp-idf/sat-dual-stack/: CMakeLists.txt  README.md  sdkconfig.defaults
samples/esp-idf/sat-dual-stack/main/: CMakeLists.txt  Kconfig.projbuild  app_ble.c  app_ble.h  main.c
samples/freertos/ti/ble-beacon/: README.md  ble-beacon-hubble.syscfg  ble-beacon.syscfg  makefile  makefile-syscfg  sample.yaml
samples/freertos/ti/ble-beacon/src/: hubble_ble_adv.c  hubble_ble_ti.c  main.c
samples/freertos/ti/sat-continuous/: sample.yaml
samples/freertos/ti/sat-continuous/src/: main.c
samples/freertos/ti/sat-dtm/: sample.yaml
samples/freertos/ti/sat-dual-stack/: sample.yaml
samples/zephyr/ble-beacon-mfg-data/: CMakeLists.txt  Kconfig  README.md  prj.conf  sample.yaml
samples/zephyr/ble-beacon-mfg-data/src/: main.c  master_key.c.in
samples/zephyr/sat-continuous/boards/: thingy53_nrf5340_cpunet.conf  xiao_mg24.conf
samples/zephyr/sat-continuous/src/: main.c
samples/zephyr/sat-dtm/: Kconfig  README.md  prj.conf  sample.yaml
samples/zephyr/sat-dtm/boards/: nrf21540dk.conf  xg24_rb4187c.conf
samples/zephyr/sat-dtm/src/: main.c
samples/zephyr/sat-dual-stack/: README.md
samples/zephyr/sat-dual-stack/boards/: nrf54l15dk_nrf54l15_cpuapp-softdevice.conf
samples/zephyr/sat-dual-stack/src/: main.c
specs/: spec-terrestrial-protocol.md
src/: hubble.c  hubble_ble.c  hubble_crypto.c  hubble_priv.h  hubble_sat.c  hubble_sat_ephemeris.c  hubble_sat_packet.c  hubble_sat_pass_prediction.c
src/crypto/: mbedtls.c  psa.c
src/utils/: bitarray.c  bitarray.h
tests/riglink/: CMakeLists.txt  README.md  prj.conf
tests/riglink/boards/: native_sim.overlay  native_sim_native_64.overlay  nrf52840dk_nrf52840.conf  nrf52840dk_nrf52840.overlay
tests/riglink/python/: conftest.py  requirements.txt  test_ble.py  test_reference.py
tests/riglink/src/: main.c
tests/zephyr/ble-network/: prj.conf  testcase.yaml
tests/zephyr/ble-network/src/: main.c
tests/zephyr/ephemeris/: testcase.yaml
tests/zephyr/ephemeris/src/: main.c
tests/zephyr/sat-api/src/: main.c
tests/zephyr/unit/ble-advertise/: CMakeLists.txt  prj.conf  testcase.yaml
tests/zephyr/unit/ble-advertise/src/: main.c  test_decrypt.c  test_decrypt.h  test_vectors.h  test_vectors_counter.c  test_vectors_counter.h
tools/: analyze  ble-adv.py  coccicheck  cppcheck-suppressions.txt  generate_ble_test_vectors.py  hubble_ref_crypto.py
tools/ci/: esp-idf-build-manifest.yaml  ti_build.py  twister-quarantine.yaml
