set(SDK_BASE_DIR ../../../)

# ESP-IDF port reuses the FreeRTOS port for uptime (hubble_uptime_get)
# and weak default implementations (hubble_rand_get, hubble_log).
set(SRCS
    "${SDK_BASE_DIR}/port/esp-idf/hubble_esp_idf.c"
    "${SDK_BASE_DIR}/port/freertos/hubble_freertos.c"
    "${SDK_BASE_DIR}/src/hubble.c"
    "${SDK_BASE_DIR}/src/hubble_crypto.c"
)

if(IDF_VERSION_MAJOR LESS 6)
    list(APPEND SRCS
        "${SDK_BASE_DIR}/src/crypto/mbedtls.c"
    )
else()
    list(APPEND SRCS
        "${SDK_BASE_DIR}/src/crypto/psa.c"
    )
endif()

if(CONFIG_HUBBLE_BLE_NETWORK)
    list(APPEND SRCS
        "${SDK_BASE_DIR}/src/hubble_ble.c"
    )
endif()

if(CONFIG_HUBBLE_SAT_NETWORK)
    list(APPEND SRCS
        "${SDK_BASE_DIR}/port/freertos/hubble_sat_freertos.c"
        "${SDK_BASE_DIR}/src/hubble_sat.c"
        "${SDK_BASE_DIR}/src/hubble_sat_ephemeris.c"
        "${SDK_BASE_DIR}/src/utils/bitarray.c"
        "${SDK_BASE_DIR}/src/reed_solomon_encoder.c"
    )

    if(CONFIG_HUBBLE_SAT_NETWORK_PROTOCOL_V1)
        list(APPEND SRCS
            "${SDK_BASE_DIR}/src/hubble_sat_packet.c"
        )
    endif()
endif()

idf_component_register(
    INCLUDE_DIRS
        "${SDK_BASE_DIR}/include"
        "${SDK_BASE_DIR}/src"
        "${SDK_BASE_DIR}/port/esp-idf"
        "${SDK_BASE_DIR}/port/freertos"
    PRIV_INCLUDE_DIRS
    REQUIRES
    PRIV_REQUIRES
        "mbedtls"
        "freertos"
        "log"
    SRCS
        ${SRCS}
)

component_compile_options(${EXTRA_C_FLAGS_LIST})

target_compile_definitions(${COMPONENT_LIB} PRIVATE CONFIG_ESP_IDF_BUILD)
target_compile_definitions(${COMPONENT_LIB} PUBLIC WITH_POSIX)
